--- a/tumblr.html
+++ b/tumblr.html
@@ -30,7 +30,7 @@
     text += '<a href='+ p.post_url +'>'+ p.post_url +'</a></li>';
           text += '<br></br>';
           }
-          $('body').append(text);
+          $('#content').append(text);
         }
     });</script>
 </html>
