--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@
 
 
 <html>
-<head>
+<head>	
 	<title>Thomas Newlands's Portable Museum</title>
 	<link rel="stylesheet" href="mystyle.css">
 	<script src="jquery-2.1.4.min.js" type="text/javascript"></script>
-	<style>
-		.tmblr-iframe{  display:none; }
-	</style>
-	
 </head>
 <body>
 	<div id="sidebar">
@@ -20,8 +16,8 @@
 	</div>
 	
 	<div id="content"> 
-		<script src="http://thnewlands.tumblr.com/js" type="text/javascript"></script>
 	</div>
 	
+	<script src="js/tumblrfeed.js"></script>
 </body>
 </html>
