Updated infllate description and moved some things from ongoing

--- a/indexpages/inflate/index.html
+++ b/indexpages/inflate/index.html
@@ -15,8 +15,10 @@
 	</div>
 	
 	<div id="content"> 
-	<p> <b>  Inflate.exe - 2015 </b> </p>
+	<p> <b>  Inflate.exe - 2015 / 2016 </b> </p>
 	
+	<p> I updated Inflate to work on android devices, updated it visually and gave it a nice itch page you can find here: <a href="https://thnewlands.itch.io/inflate" target="newtab">thnewlands.itch.io/inflate</a> </p>
+	<p> --- </p>
 	<p> Game where you pump up videogame characters. The game is built in Unity and played with a physical bike pump.</p>
 	
 	<br> <img src="inflate1.png" </br>
