--- a/menu.html
+++ b/menu.html
@@ -47,7 +47,11 @@
 
 		<div class = title><a style="color: #2b3d50;" href="/"> <b>Thomas Newlands's</b></font><BR>
 		<b>portable museum</b></font><BR></a></div>
+		
 		<p><b>Ongoing</b><br>
+		<a href="/indexpages/markmaker/">&#127912; Markmaker</a><BR>
+		
+		<p><b>2016</b><br>
 		<a href="/indexpages/reaching/">&#128250; Reaching</a><BR>
 		<a href="/indexpages/somniloquies/">&#127769; Somniloquies</a><BR>
 		<a href="/indexpages/callandresponse/">&#127760; Call and Response</a><BR>
@@ -64,7 +68,6 @@
 		<a href="/indexpages/balanceboards/">&#128259; Balance Boards</a><BR>
 		</p>
 
-		
 		<p><b>2014</b><BR>
 		<a href="/indexpages/doorisopen/"> &#127969; Door is Open</a><BR>
 		<a href="/indexpages/flexhand/"> &#9995; Flex Hand</a><BR>
@@ -72,8 +75,6 @@
 
 
 		<p><b>Misc</b><BR>
-
-
 		<a href="/indexpages/info/">info</a><BR>
 		<a href="/indexpages/cv/">cv</a><BR>
 		<a href="http://thnewlands.tumblr.com/">tumblr</a><br />
