--- a/indexpages/reaching/index.html
+++ b/indexpages/reaching/index.html
@@ -18,8 +18,8 @@
 	
 	<p> Reaching is a first-person, exploration-oriented videogame - what a disgruntled gamer might call a "walking simulator." You, the player, control a recent college graduate living in a flat in a three-story townhouse. You'll have unrivaled access to all the technological amenities of a twenty-something. You can watch TV, stare at computer monitors, or examine a fancy little tablet. There's plenty to see, as long as you're looking. </p>
 		
-	<br> <img src="reachingnew1.png" </br>
-	<br> <img src="reachingnew2.png" </br>
+	<br> <img src="reachingnew1.jpg" </br>
+	<br> <img src="reachingnew2.jpg" </br>
 	
 	<p>Code and animations by <a href="http://peter-smyth.com/">Peter Smyth</a>, sound by <a href="https://twitter.com/gnomebodyknows">Luke VanOene</a>, 3d art by Thomas Newlands</p>
 	
