--- a/menu.html
+++ b/menu.html
@@ -53,6 +53,8 @@
 		<a href="http://thnewlands.tumblr.com/">tumblr</a><br />
 		<a href="http://twitter.com/thnewlands">twitter</a><br />
 		<a href="https://thnewlands.itch.io/">itch.io</a><br />
+		<a href="https://github.com/thnewlands">github</a><br />
+		<a href="https://connect.unity.com/u/58197689090915002eeb3858/">unity connect</a><br />
 		<a href="/indexpages/shoutouts/">shoutouts</a><br />
 
 		<p><b>Ongoing</b><br>
