--- a/indexpages/markmaker/index.html
+++ b/indexpages/markmaker/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-<title>Hug Point</title>
+<title>Markmaker for Project Tango</title>
 <link rel="stylesheet" href="/mystyle.css">
 <script src="/jquery-2.1.4.min.js" type="text/javascript"></script>
 </head>
