CV and resume updates

--- a/indexpages/cv/index.html
+++ b/indexpages/cv/index.html
@@ -44,6 +44,8 @@
 		
 		<b> Shows </b>
 		<p> 2017 </p>
+		<p><i>IndieCade Festival</i>, Little Tokyo, Los Angeles, CA </p>
+		<p><i>Intel Buzz Workshop</i>, The Evergreen, Portland, OR </p>
 		<p><i>Bit Bash</i>, Revel Fulton Market, Chicago, IL </p>
 		<p> 2016 </p>
 		<p><i>OMSI After Dark</i>, Oregon Museum of Science and Industry, Portland, OR </p>
