--- a/menu.html
+++ b/menu.html
@@ -50,6 +50,7 @@
 		<p></p>
 		<a href="/indexpages/info/">info</a><BR>
 		<a href="/indexpages/cv/">cv</a><BR>
+		<a href="/files/Thomas_Newlands_Resume.pdf">resume</a><BR>
 		<a href="http://thnewlands.tumblr.com/">tumblr</a><br />
 		<a href="http://twitter.com/thnewlands">twitter</a><br />
 		<a href="https://thnewlands.itch.io/">itch.io</a><br />
