--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
 	<title>Thomas Newlands's Portable Museum</title>
 	<link rel="stylesheet" href="mystyle.css">
 	<script src="jquery-2.1.4.min.js" type="text/javascript"></script>
+    
+    <link rel="icon" type="image/png" href="images/logo.ico" sizes="16x16">
+    
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-65959433-1', 'auto');
+	  ga('send', 'pageview');
+	</script>
 </head>
 <body>
 	<div id="sidebar">
