added a bunch of images and put everything into tables

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     
     <script type="text/javascript">
-        var converter = new showdown.Converter({emoji: true});
+        var converter = new showdown.Converter({emoji: true, tables:true});
 
         $.ajax({
             url : "index.md",
