--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" href="mystyle.css">
 	<script src="js/jquery-2.1.4.min.js" type="text/javascript"></script>
     <script src="js/showdown.min.js" type="text/javascript"></script>
+    <script src="js/p5.min.js" type="text/javascript"></script>
+    <script src="js/sketch.pjs" type="text/javascript"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" /> 
 
     <link rel="icon" type="image/png" href="images/logo.ico" sizes="16x16">
@@ -31,7 +33,7 @@
     
     <div id="content">
     </div>
-    
+    <div id="processing"> </div>
     <script type="text/javascript">
         var converter = new showdown.Converter({emoji: true, tables:true});
 
