--- a/indexpages/cv/index.html
+++ b/indexpages/cv/index.html
@@ -26,9 +26,10 @@
 		<b> Education </b>
 		<p> 2017 - 2020 </p>
 		<p> University of Oregon (UO), Eugene, OR</p>
+		<p> Art and Technology BFA </p>
 		<p> 2014 - 2016 </p>
 		<p> School of the Art Institute of Chicago (SAIC), Chicago, IL</p>
-		<p> Focused on New Media Art
+		<p> Focused on New Media Art </p>
 		<p> SAIC Merit Scholarship </p>
 		<p> SAIC Contemporary Practices Scholarship </p>
 		<br></br>
