added a maze 2019 content & some tweaks

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html>
     
 <head>	
-	<title>Thomas Newlands's Portable Museum</title>
+	<title>Thomas Newlands' Portable Museum</title>
 	<link rel="stylesheet" href="mystyle.css">
 	<script src="js/jquery-2.1.4.min.js" type="text/javascript"></script>
     <script src="js/showdown.min.js" type="text/javascript"></script>
