--- a/indexpages/cv/index.html
+++ b/indexpages/cv/index.html
@@ -45,6 +45,7 @@
 		
 		<b> Shows </b>
 		<p> 2019 </p>
+        <p><i>Slippages: AI as Creative Practice</i>, 510 Oak Building, Eugene, OR </p>
 		<p><i>Winter Lights</i>, City of Eugene, Eugene, OR </p>
 		<p><i>A MAZE. / BERLIN</i>, SEZ Berlin, Berlin, Germany </p>
 		<p> 2018 </p>
