--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 <html>
     
 <head>	
+	
 	<title>Thomas Newlands' Portable Museum</title>
 	<link rel="stylesheet" href="mystyle.css">
 	<script src="js/jquery-2.1.4.min.js" type="text/javascript"></script>
     <script src="js/showdown.min.js" type="text/javascript"></script>
     <script src="js/p5.min.js" type="text/javascript"></script>
     <script src="js/sketch.pjs" type="text/javascript"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1" /> 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
    <meta charset="UTF-8">
 
