added scholarship to cv

--- a/indexpages/cv/index.html
+++ b/indexpages/cv/index.html
@@ -20,13 +20,14 @@
 		<br></br>
 		<p> Thomas Newlands </p>
 		<p> New Media Artist </p>
-		<p> Chicago, IL & Portland, OR </p>
+		<p> Portland & Eugene, OR </p>
 		<br></br>
 		
 		<b> Education </b>
 		<p> 2017 - 2020 </p>
 		<p> University of Oregon (UO), Eugene, OR</p>
 		<p> Art and Technology BFA </p>
+		<p> David McCosh Memorial Scholarship </p>
 		<p> 2014 - 2016 </p>
 		<p> School of the Art Institute of Chicago (SAIC), Chicago, IL</p>
 		<p> Focused on New Media Art </p>
