--- a/youjustkeepfalling/index.html
+++ b/youjustkeepfalling/index.html
@@ -1,11 +1,9 @@
+<!DOCTYPE html>
 <html>
-<head>
-<title>You Just Keep Falling</title>
-<meta name="description" content="Landing page for You Just Keep Falling">
-<meta name="keywords" content="game, mobile">
-</head>
-<frameset rows="100%,0" border="0">
-<frame src="https://www.notion.so/thnewlands/You-Just-Keep-Falling-2bc2f5ee2aa2402d855f51fb19fa8a71" frameborder="0">
-<frame frameborder="0">
-</frameset>
+   <head>
+      <title>Redirecting...</title>
+      <meta http-equiv = "refresh" content = "2; url = https://www.notion.so/thnewlands/You-Just-Keep-Falling-2bc2f5ee2aa2402d855f51fb19fa8a71" />
+   </head>
+   <body>
+   </body>
 </html>
