--- a/indexpages/cv/index.html
+++ b/indexpages/cv/index.html
@@ -45,9 +45,13 @@
 		<br></br>
 		
 		<b> Shows </b>
+		<p> 2020 </p>
+		<p><i>Currents Virtual Festival 2020</i></p>
+		<p><i>In the Dragons Keep</i>, LaVerne Krause Gallery, Eugene, OR </p>
 		<p> 2019 </p>
-        	<p><i>Diatribes, Installation and VR play-test by Veronica Graham</i>, Kala Institute, Berkeley, CA </p>
-        	<p><i>Slippages: AI as Creative Practice</i>, 510 Oak Building, Eugene, OR </p>
+		<p><i>soft screen 3: soft play</i>, Vancouver, BC</p>
+		<p><i>Diatribes, Installation and VR play-test by Veronica Graham</i>, Kala Institute, Berkeley, CA </p>
+		<p><i>Slippages: AI as Creative Practice</i>, 510 Oak Building, Eugene, OR </p>
 		<p><i>Winter Lights</i>, City of Eugene, Eugene, OR </p>
 		<p><i>A MAZE. / BERLIN</i>, SEZ Berlin, Berlin, Germany </p>
 		<p> 2018 </p>
