--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
 <head>	
 	
-	<title>Thomas Newlands' Portable Museum</title>
+	<title>Holly Newlands' Portable Museum</title>
 	<link rel="stylesheet" href="mystyle.css">
 	<script src="js/jquery-2.1.4.min.js" type="text/javascript"></script>
     <script src="js/showdown.min.js" type="text/javascript"></script>
