--- a/indexpages/cv/index.html
+++ b/indexpages/cv/index.html
@@ -18,9 +18,9 @@
 		
 		<b> CV </b>
 		<br></br>
-		<p> Thomas Newlands </p>
+		<p> Holly Newlands </p>
 		<p> New Media Artist </p>
-		<p> Portland & Eugene, OR </p>
+		<p> Portland, OR</p>
 		<br></br>
 		
 		<b> Education </b>
